<resources>
    <string name="app_name" translatable="false">Jojoz quizz</string>
    <string name="string_title" translatable="false">Jojoz Quizz</string>
    <string name="string_hint_ask_name">Your nickname</string>
    <string name="links">Some links</string>
    <string name="hint_number_questions">Number of questions :</string>
    <string name="text_number_questions">Number of questions</string>
    <string name="multiple_choices">Multiple choices</string>

    <string name="application_key" translatable="false">f4u6HBG1W3bd87u0468j</string>
    <string name="ad_id_bonus1" translatable="false">ca-app-pub-5050054249389989/9324639067</string>
    <string name="ad_id_bonus2" translatable="false">ca-app-pub-5050054249389989/9211204402</string>
    <string name="ad_id_bonus3" translatable="false">ca-app-pub-5050054249389989/6686582029</string>

    <string name="api_domain" translatable="false">http://192.168.0.41:3000/</string>
    <string name="api_endpoint_getLastId" translatable="false">jojozquizz/questions/lastId/</string>
    <string name="api_endpoint_getQuestion" translatable="false">jojozquizz/questions/question/</string>
    <string name="api_endpoint_getCurrentVersion" translatable="false">jojozquizz/version/currentVersion/</string>
    <string name="api_endpoint_getServerKey" translatable="false">auth/serverKey</string>

    <string name="error_start1">You requested too many questions (max. 75)</string>

    <string name="text_positive_welcome_dialog">Let\'s go !</string>
    <string name="niu" translatable="false">NIU</string>
    <string name="bonus">Bonus</string>

    <string name="play">Play</string>
    <string name="new_game">New game</string>

    <plurals name="string_welcome_again">
        <item quantity="one">Hi %1$s ! During you last game, you answered %2$d question correctly out of %3$d</item>
        <item quantity="other">Hi %1$s ! During you last game, you answered %2$d questions correctly out of %3$d</item>
    </plurals>

    <plurals name="score_to_send">
        <item quantity="one">I answered %1$d questions correctly out of %2$d by playing %3$d game on Jojoz Quizz\n Try to do better !\nDownload it here : https://play.google.com/store/apps/details?id=com.jojo.jojozquizz</item>
        <item quantity="other">I answered %1$d questions correctly out of %2$d by playing %3$d games on Jojoz Quizz\n Try to do better !\nDownload it here : https://play.google.com/store/apps/details?id=com.jojo.jojozquizz</item>
    </plurals>

    <string name="content_description_image_bonus_1" translatable="false">Image bonus 1</string>
    <string name="content_description_image_bonus_2" translatable="false">Image bonus 2</string>
    <string name="content_description_image_bonus_3" translatable="false">Image bonus 3</string>
    <string name="content_description_plus">Button +</string>

    <string name="thanks_text">Thanks to the people listed below<br/><br/>Questions writers :<br/>- leversplat<br/>- Julie<br/>- Piayral<br/><br/>Design masters :<br/>Nokolas (Logo, and some others things)<br/><br/>Beta testers :<br/>- leversplat<br/>- Alexouu<br/>- ODDIN Cyril<br/>- Nokolas<br/>- lo<br/><br/>Leversplat and Wolzinix for its immense involvement<br/>And a very big thank you to Alexouu, for his advice and support</string>
    <string name="niu_text">All the features planned for the next versions:<br />- New game mode<br />- New predefined games<br />- Sounds and music (normally ^^)<br /><br />And of course more questions and categories</string>
    <string name="niu_title" translatable="false">Next Important Update</string>
    <string name="link_instagram" translatable="false">Instagram</string>
    <string name="link_reddit" translatable="false">Reddit</string>
    <string name="link_youtube" translatable="false">YouTube</string>
    <string name="link_twitter" translatable="false">Twitter</string>
    <string name="link_thanks">Thanks</string>
    <string name="bonus_2">Remove one answer</string>
    <string name="bonus_help">Help</string>
    <string name="bonus_easier">Easier plz</string>
    <string name="bonus1_title" translatable="false">- Bonus 1</string>
    <string name="bonus2_title" translatable="false">- Bonus 2</string>
    <string name="bonus3_title" translatable="false">- Bonus 3</string>
    <string name="bonus1_description">The first bonus allows you to skip the question you are stuck on !</string>
    <string name="bonus2_description">This second bonus is also very practical since if, for some reason, you have a doubt between the answers given you can remove one of them to understand a little bit better</string>
    <string name="bonus3_description">Do you find the current question too tough ? With this last bonus don\'t panic ! It will magically drop the level down a notch (Difficult -> Medium ; Medium -> Easy) and voila, it\'s easier right away ?</string>

    <string name="zero" translatable="false">0</string>
    <string name="user_score">Score</string>
    <string name="name">Name</string>
    <string name="back_arrow">Back arrow</string>
    <string name="players">Users</string>

    <string name="information">Information</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="text_confirm">Confirm</string>
    <string name="new_user_name_dialog_title">What\'s your name ?</string>
    <string name="bonus_of">Player\'s bonus</string>
    <string name="company_name" translatable="false">Nextfor mobile</string>
    <string name="slash" translatable="false">/</string>
    <string name="game_game_over">Game over</string>
    <string name="string_welcome">Welcome !</string>
    <string name="string_start">Start</string>
    <string name="settings">Settings</string>
    <string name="error_start_name">Don\'t you have a name ?</string>
    <string name="error_start0">You can\'t request a number equal or lower than 0</string>
    <string name="welcome_title_name_dialog">Welcome to Jojoz Quizz</string>
    <string name="change_title_name_dialog">Nickname change</string>
    <string name="ad_error">Can\'t load ad now, please try again later :)</string>
    <string name="link_discord">Discord server</string>
    <string name="bonus_skip">Skip</string>
    <string name="question">Question</string>
    <string name="answer1">Answer 1</string>
    <string name="answer2">Answer 2</string>
    <string name="answer3">Answer 3</string>
    <string name="answer4">Answer 4</string>
    <string name="cat">Category</string>
    <string name="difficulty">Difficulty</string>
    <string name="cats">Categories</string>
    <string name="suspense">Suspens . . .</string>
    <string name="whats_your_name">Give your new name</string>
    <string name="motto">Lot of questions, lot of knowledge</string>
    <string name="content_description_logo">Application Logo</string>
    <string name="share_icon">Share icon</string>
    <string name="pen_icon">Pen icon</string>
    <string name="trash_icon">Trash icon</string>
    <string name="plus_icon">Plus icon</string>
    <string name="select_categories">Categories choice</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="all_ok">OK</string>
    <string name="users_icon">Users icon</string>
    <string name="use_user_button">Use this profile</string>
    <string name="invalid_name">Invalid name</string>
    <string name="reload_questions">Reload questions</string>
    <string name="game_cant_use_bonus_last_question">You can\'t use this bonus on last question</string>
    <string name="settings_rewrite_database">Rewrite database ?</string>
    <string name="settings_rewrite_database_confirmation">Do you really want to rewrite every questions ?</string>
    <string name="all_cancel">Cancel</string>
    <string name="settings_questions_langage">Questions language</string>
    <string name="settings_fr" translatable="false">FR</string>
    <string name="settings_en" translatable="false">EN</string>
    <string name="settings_privacy_policy">Privacy policy</string>
    <string name="settings_terms_of_service">Terms of service</string>
    <string name="game_end_game">You answered %1$d questions correctly out of %2$d<br/>Score : %3$d</string>

    <string-array name="categories">
        <item>Aeronautics</item>
        <item>Other</item>
        <item>Animals</item>
        <item>Anime - manga</item>
        <item>Automotive</item>
        <item>Comics</item>
        <item>Celebrities</item>
        <item>Cinema</item>
        <item>Quotes</item>
        <item>Cooking</item>
        <item>Economy</item>
        <item>English</item>
        <item>Geography</item>
        <item>History</item>
        <item>Computer science</item>
        <item>Networks and data</item>
        <item>Videogames</item>
        <item>Foreign langages</item>
        <item>Literature</item>
        <item>Mathematics</item>
        <item>Music</item>
        <item>Nature</item>
        <item>Photography</item>
        <item>Religion</item>
        <item>Mythology</item>
        <item>Health</item>
        <item>Science</item>
        <item>Sport</item>
    </string-array>
    <string-array name="difficulties">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string name="game_not_enough_bonus">You don\'t have enough of this bonus !</string>
    <string name="game_bonus_already_use_case">Already used in this game !</string>
    <string name="game_bonus_3_lower_difficulty_case">Actual difficulty is already as lower as possible</string>
    <string name="impossible_to_load_questions">Impossible to fetch questions from server</string>
    <string name="all_retry">Retry</string>
    <string name="no_questions">Internal database does not contain any question</string>
    <string name="update_available">Update available !</string>
    <string name="update_available_text">There is a new update available on Play Store !</string>
    <string name="update">Update</string>
    <string name="later">Later</string>
    <string name="rewrite">Rewrite</string>
    <string name="select_nothing_checked">You have to choose at least one difficulty and one category</string>
    <string name="delete_user">Delete this user ?</string>
    <string name="delete">Delete</string>
    <string name="delete_user_message">Do you really want to erase this user ?</string>
    <string name="delete_user_error">There is just one user left, you can\'t remove it</string>
    <string name="user_stats">Stats :\n- Total score : %1$d\n- High score : %2$d\n- Number of games played : %3$d\n- Number of questions answered correctly / number of questions asked : %4$d/%5$d</string>

</resources>
